# meta_rust_cli

./: .gitignore  Cargo.toml
.github/workflows/: auto-format.yml  ci.yml  notify-parent.yml
src/: lib.rs  main.rs
