[package]
name = "meta_rust_cli"
version = "0.1.0"
edition = "2021"
description = "Rust plugin for meta CLI to run cargo commands across Rust projects"
license = "MIT"

[[bin]]
name = "meta-rust"
path = "src/main.rs"

[lib]
name = "meta_rust_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"