[package]
name = "meta_rust_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust plugin for meta CLI to run cargo commands across Rust projects"

[[bin]]
name = "meta-rust"
path = "src/main.rs"

[lib]
name = "meta_rust_cli"
path = "src/lib.rs"

[dependencies]
meta_plugin_protocol = { path = "../meta_plugin_protocol" }
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"