[package]
name = "meta_rust_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust plugin for meta CLI to run cargo commands across Rust projects"

[[bin]]
name = "meta-rust"
path = "src/main.rs"

[lib]
name = "meta_rust_cli"
path = "src/lib.rs"

[dependencies]
meta_plugin_protocol = { path = "../meta_plugin_protocol" }
meta_cli = { path = "../meta_cli", package = "meta" }
anyhow = "1"
colored = "2"
serde_json = "1"
indexmap = "2"

[dev-dependencies]
tempfile = "3"